	  client request has not prefered reply size inside. This confuses
	  all old fsp clients.
	common/strdup.c removed
	bsd_src/function.c bcopy -> memmove
	removed STDC_HEADER checks, drop support for pre-ANSI compilers
	started work on alternate SCons based build system
	fspd: use urandom, not random -> avoid hangs on Lin suck 2.6

Version 2.8.1b23 - 14 Jan 2005
	use srandomdev for seeding of client seq. number generator
	make dirlister smarter - save one RTT per each directory listings
	Locking uses unsigned int sized key, not unsigned short
	Locking type can be specified by ./configure --with-locking=
	Lock prefix can be specified by ./configure --with-lockprefix=
	All 5 locking subsystems synced against fsplib and fspclient code base
	Do not use CC_STAT when doing directory listing -- performace gain.
	  This saves 1 RTT per directory listing.
	clients: do not send CC_BYE to the server on exit if we can keep server
	  key for next invocation. Saves 1 RTT.
	!! Major client utils speedup: Directory listings are now 3 RTT
	  times faster.
	fmvcmd added to merged client
	new command fbye(1). Sends CC_BYE to the server and possibly removes
	 cached session key.
	fbye added to merged client
	PROTOCOL: Add note about client key multiplexing
	we have incorrectly recovered requested size of reply packet sent
	  by client
	!! LARGE PACKET SUPPORT !! FSP can be quite Faaaast now.
	fver -l displays maximum packet size supported by client
	fsp_env.7: added info about larger packets
	send_file function renamed to serve_file for avoiding name clash
	  on AIX.
	idle resend multiplier descreased from 1.5 to 1.33
	correctly init first sequence number
	sequence numbering changed to allow up to 8 packets flying in the
	  network. Old code uses 4. Even CZFREE.net do not drops 8 packets
	  in row unless line is down.
	allow better debuging of retry alg.
	Default max packesize supported by server set by 1200 bytes for
	  now. Let's make some experiments.