@@ -8,13 +8,32 @@ PACKAGE='fsp'
 VERSION='2.8.1b24'
 
 env = Environment(CPPPATH='#/include')
-env.Append( ENV = {'HOME': os.environ.get('HOME')}  )
-env.Append( ENV = {'DISTCC_HOSTS': os.environ.get('DISTCC_HOSTS')}  )
-if os.environ.get('CC'):
-    env.Replace(CC =  os.environ.get('CC'))
-
 # Turn CPPFLAGS to list
 env.Append( CPPFLAGS = [])
+
+################### Functions ######################
+def importEnv(list=None, prefix=None):
+   if list:
+       for i in list:
+	   if os.environ.get(i):
+	       kw={}
+	       kw[i]=os.environ.get(i)
+	       kw={ 'ENV': kw }
+	       env.Append(**kw)
+   if prefix:
+       for i in os.environ.keys():
+	   if i.startswith(prefix):
+	       kw={}
+	       kw[i]=os.environ.get(i)
+	       kw={ 'ENV': kw }
+	       env.Append(**kw)
+
+#import environment
+importEnv(['HOME','CC'])
+importEnv(prefix='DISTCC_')
+importEnv(prefix='CCACHE_')
+if env['ENV'].get('CC'):
+    env.Replace( CC = env['ENV'].get('CC'))
 # Get CC from commandline
 if ARGUMENTS.get('CC', 0):
     env.Replace(CC =  ARGUMENTS.get('CC'))
@@ -69,11 +88,43 @@ def checkForUserPrefix(conf):
     else:
 			  conf.Result(0)
 
+def getVarSize(conf,var):
+    conf.Message("checking for size of "+var+" ")
+    rc = conf.TryCompile("""
+#include <stdio.h>
+#include <sys/types.h>    
+      
+main ()
+{
+ if ((%s *) 0)
+   return 0;
+ if (sizeof (%s))
+   return 0;
+ ;
+ return 0;
+}
+""" % (var,var),'.c')
+    if rc:
+	rc,result = conf.TryRun('''
+#include <stdio.h>
+#include <sys/types.h>	
+
+main ()
+{
+    printf("%%d",sizeof(%s));
+    return 0;
+}''' % var,'.c')
+	if rc:
+	    rc=result
+    conf.Result(rc)
+    return rc
+
 ############  Start configuration ##############
 conf = Configure(env,{'checkForGCCOption':checkForGCCOption,
                       'MAINTAINER_MODE':checkForMaintainerMode,
 		      'checkForLockPrefix':checkForLockPrefix,
-		      'checkPrefix':checkForUserPrefix
+		      'checkPrefix':checkForUserPrefix,
+		      'sizeOf':getVarSize
 		      })
 #check for GCC options
 for option in Split("""
@@ -93,6 +144,23 @@ for option in Split("""
 #portability build time config
 if conf.CheckFunc('srandomdev'):
     conf.env.Append(CPPFLAGS = '-DHAVE_SRANDOMDEV')
+if conf.CheckFunc('fseeko'):
+    conf.env.Append(CPPFLAGS = '-DHAVE_FSEEKO')
+if conf.CheckFunc('random'):
+    conf.env.Append(CPPFLAGS = '-DHAVE_RANDOM')
+if conf.CheckFunc('fork'):
+    conf.env.Append(CPPFLAGS = '-DHAVE_FORK')
+if conf.CheckFunc('setsid'):
+    conf.env.Append(CPPFLAGS = '-DHAVE_SETSID')
+if conf.CheckCHeader('unistd.h'):
+    env.Append(CPPFLAGS = '-DHAVE_UNISTD_H')
+env.Append(CPPFLAGS = '-DSIZEOF_CHAR='+conf.sizeOf("char"))
+env.Append(CPPFLAGS = '-DSIZEOF_LONG='+conf.sizeOf("long"))
+env.Append(CPPFLAGS = '-DSIZEOF_SHORT='+conf.sizeOf("short"))
+env.Append(CPPFLAGS = '-DSIZEOF_UNSIGNED='+conf.sizeOf("unsigned"))
+env.Append(CPPFLAGS = '-DSIZEOF_VOID='+conf.sizeOf("void"))
+env.Append(CPPFLAGS = '-DSIZEOF_OFF_T='+conf.sizeOf("off_t"))
+
 #check for available locking methods
 if not conf.CheckType("union semun", "#include <sys/types.h>\n#include <sys/ipc.h>\n#include <sys/sem.h>",'c'):
        conf.env.Append(CPPFLAGS = "-D_SEM_SEMUN_UNDEFINED=1")
@@ -100,6 +168,7 @@ fun_lockf=conf.CheckFunc("lockf")
 fun_semop=conf.CheckFunc("semop")
 fun_shmget=conf.CheckFunc("shmget")
 fun_flock=conf.CheckFunc("flock")
+
 #select locking type
 lt=ARGUMENTS.get('locking', 0) or ARGUMENTS.get("with-locking",0) or ARGUMENTS.get("lock",0) or ARGUMENTS.get("with-lock",0)
 if lt == "none":
@@ -125,6 +194,7 @@ else:
     conf.env.Append(CPPFLAGS = '-DFSP_NOLOCKING')
 conf.checkForLockPrefix()
 conf.checkPrefix()
+conf.env.Append(CPPFLAGS = '-DSYSCONFDIR=\\"'+PREFIX+'/etc\\"')
 conf.MAINTAINER_MODE()
 conf.Finish()
 
@@ -133,4 +203,4 @@ TARBALL=PACKAGE+'-'+VERSION+'.tar.gz'
 env.Append(CPPFLAGS = "-DPACKAGE_VERSION=\\\""+VERSION+"\\\"")
 # process build rules
 Export( Split("env PREFIX PACKAGE VERSION TARBALL"))
-env.SConscript(dirs=Split('. bsd_src common server client clients contrib'))
+env.SConscript(dirs=Split('. bsd_src common server client clients contrib tests'))
